--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,15 +1,26 @@
 trigger:
 - '*'
 
+
+variables:
+  buildConfiguration: 'Release'
+
+stages:
+- stage: 'Build'
+  displayName: 'Build the web application'
+  jobs:
+  - job: 'Build'
+    displayName: 'Build job'
+
 pool:
   vmImage: 'ubuntu-20.04'
   demands:
   - npm
 
 variables:
-  buildConfiguration: 'Release'
   wwwrootDir: 'Tailspin.SpaceGame.Web/wwwroot'
   dotnetSdkVersion: '6.x'
+
 
 steps:
 - task: UseDotNet@2
